@@ -120,7 +120,7 @@ li.publishercol a.country_code		{padding:15px 0;}
 #publisher_dropmenu, .compare_wrap.pub					{margin-right:0; margin-left:20px;}
 #country_dropmenu select, #publisher_dropmenu select	{min-width:460px; max-width:460px;}
 #country_dropmenu .chosen-container-single .chosen-single span, #publisher_dropmenu .chosen-container-single .chosen-single span	{color:#000; font-size:20px; line-height:46px;}
-#country_dropmenu .chosen-container-single .chosen-single, #publisher_dropmenu .chosen-container-single .chosen-single				{height:46px;}
+#country_dropmenu .chosen-container-single .chosen-single, #publisher_dropmenu .chosen-container-single .chosen-single				{height:46px; width:450px; text-align:center;}
 #country_dropmenu .chosen-container .chosen-results li	, #publisher_dropmenu .chosen-container .chosen-results li					{text-align:left;}
 
 
