@@ -12,6 +12,7 @@ Added feedback links for search section
 Updated styles and font sizes for data descriptions
 Added translations for new sections
 Added dropmenu on search view
+Fixed dropmenu width issues
 
 
 Development Portal (2016-11-08 shi)
